--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_pro: ^1.0.0
+  cached_network_image: 3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/api/app_page.json
-    
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
